  * NOT RELEASED YET
  * import new upstream snapshot 1.0-rc2:
    - fixes:
      - hostapd: Fails to authenticate on wpa2 password (Closes: #483924)
      - hostapd: EAPOL reauthentication/rekeying timeout loop when using WMM
        (Closes: #655129, #659059)
    - import git patches up to hostap_0_7_2-1519-gfee70d7.
    - temporarily disable conflicting patches.
    - rebase patches:
      - hostap_allow-linking-with-libnl-3.2
  * merge source packages for hostapd and wpasupplicant under the new name
    "wpa", which is also used by upstream.
  * restrict wpasupplicant to linux-any and kfreebsd-any, hurd lacks kernel
    support.
  * bump standards version to 3.9.3, no changes necessary.
  * update dep-5 version to final 1.0, no changes necessary:
    - order licenses alphabetically.
  * build-depend on docbook-to-man explicitly.
  * convert packaging to Multi-Arch, bump compat level to 9 and debhelper
    build-dependency accordingly; all binaries are Multi-Arch=foreign.
  * update debian/copyright for wpa 1.0~rc2 and merged sources.

  [ Kel Modderman ]
  * export BINDIR=/sbin, the build system now requires it when patching
    D-Bus/systemd configuration.
  * quieten the upstream build system so that errors/warning are more visible.
  * assist with adaptation of debian/rules for merge of wpa_supplicant/hostapd:
    - add docbook-utils to build dependency list and make documentation from
      sgml source
    - ensure shared code under src/ is cleaned between wpa_supplicant/hostapd
      builds
    - put wpa_supplicant/hostapd ifupdown hooks in their own namespace, adapt
      installation of ifupdown hooks
  * drop the netdev_wrapper script from wpagui and associated patch
  * install systemd service unit file
  * refresh D-Bus service activation file patch which starts process with
    syslog and control socket support, also patch systemd service file
  * drop 09_dbus_emit_change_events.patch, applied upstream.
  * fix ftbfs with gcc/g++ 4.7 (Closes: 667416)